[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Rooms/RoomSmallSquare.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/RoomGen/LevelController.gd" type="Script" id=2]
[ext_resource path="res://Scenes/OrthoCamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TD_Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/ENM_GRND_NO_GUN.tscn" type="PackedScene" id=5]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="LevelController" type="Spatial"]
script = ExtResource( 2 )

[node name="OrthoCamera" parent="." instance=ExtResource( 3 )]

[node name="TopDown_Player" parent="." instance=ExtResource( 4 )]

[node name="Rooms" type="Spatial" parent="."]

[node name="Room" parent="Rooms" instance=ExtResource( 1 )]

[node name="ENM_GRND" parent="Rooms/Room" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.23584, 1.60476, -16.0446 )

[node name="Position3D" type="Position3D" parent="Rooms/Room/ENM_GRND/AI/PatrolPoints" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.66172, 0, -0.316296 )

[node name="Position3D2" type="Position3D" parent="Rooms/Room/ENM_GRND/AI/PatrolPoints" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.1907, -9.53674e-07, -0.466831 )

[node name="AnimationTree" parent="Rooms/Room/ENM_GRND/easy common enemy ground with no gun" index="2"]
parameters/playback = SubResource( 1 )

[editable path="Rooms/Room/ENM_GRND"]
